change default URL

--- a/assets/base/config.json
+++ b/assets/base/config.json
@@ -1,10 +1,10 @@
 {
-    "DefaultServerUrl": "",
-    "DefaultServerName": "",
+    "DefaultServerUrl": "https://community.chartguys.com",
+    "DefaultServerName": "ChartGuys",
     "TestServerUrl": "http://localhost:8065",
     "AutoSelectServerUrl": false,
 
-    "WebsiteURL": "https://mattermost.com",
+    "WebsiteURL": "https://chartguys.com",
     "ServerNoticeURL": "https://github.com/mattermost/mattermost-server/blob/master/NOTICE.txt",
     "MobileNoticeURL": "https://github.com/mattermost/mattermost-mobile/blob/master/NOTICE.txt",
 
