tweak ios build settings

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build-ios:
     name: Build iOS
-    runs-on: macos-14-large
+    runs-on: macos-latest
 
     steps:
     - name: Checkout code
