--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18.10.0'  # Match this with your project requirements
+        node-version: '18.10.0' # Ensuring Node version is as required
+        npm-version: '9.0.0'    # Ensuring npm version is as required
 
     - name: Install npm dependencies
       run: npm install
@@ -31,18 +32,11 @@ jobs:
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         # APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
         # APPLE_DEVELOPER_TEAM_ID: ${{ secrets.APPLE_DEVELOPER_TEAM_ID }}
-        # Add other necessary environment variables here
-      run: |
-        npm run build:ios
+        # Ensure all necessary environment variables are correctly set
+      run: npm run build:ios
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ios-app
-        path: TCG_Chat.ipa  # Update this path to where your build script outputs the IPA file
-
-    - name: Save to GitHub Artifacts
-      uses: actions/upload-artifact@v3
-      with:
         name: iOS App IPA
-        path: TCG_Chat.ipa  # Make sure this path is correct
+        path: ./TCG_Chat.ipa  # Ensure this is the correct path to the IPA file
