--- a/package.json
+++ b/package.json
@@ -200,7 +200,7 @@
     "lint": "eslint --ignore-path .gitignore --ignore-pattern node_modules --quiet .",
     "mmjstool": "mmjstool",
     "pod-install": "cd ios && pod install",
-    "pod-install-m1": "cd ios && arch -x86_64 pod install",
+    "pod-install-m1": "cd ios && pod install",
     "postinstall": "patch-package && ./scripts/postinstall.sh",
     "prepare": "husky install",
     "preinstall": "./scripts/preinstall.sh && npx solidarity",
