add fastlane certs

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -26,7 +26,7 @@ export MATCH_USERNAME=stuwashere@gmail.com
 # export FASTLANE_PASSWORD=<itunes connect password>
 # export MATCH_PASSWORD=<itunes connect password>
 # export MATCH_KEYCHAIN_PASSWORD=<the password of the user running the build in the build machine>
-# export MATCH_GIT_URL=<private git repository to allow match sync the provisioning profiles>
+export MATCH_GIT_URL=git@github.com:TheChartGuys/fastlane-certs.git
 export MATCH_APP_IDENTIFIER=com.mattermost.rnbeta.NotificationService,com.mattermost.rnbeta.MattermostShare,com.mattermost.rnbeta
 export MATCH_TYPE=appstore
 export MATCH_SHALLOW_CLONE=true
