turn off readonly maybe

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -30,6 +30,7 @@ export MATCH_GIT_URL=https://github.com/TheChartGuys/fastlane-certs.git
 export MATCH_APP_IDENTIFIER=com.mattermost.rnbeta.NotificationService,com.mattermost.rnbeta.MattermostShare,com.mattermost.rnbeta
 export MATCH_TYPE=appstore
 export MATCH_SHALLOW_CLONE=true
+export MATCH_READONLY=false
 export MATCH_SKIP_DOCS=true
 export FASTLANE_TEAM_ID=TPSN96N57K
 export SYNC_PROVISIONING_PROFILES=true
