--- a/fastlane/.env
+++ b/fastlane/.env
@@ -4,7 +4,7 @@
 export BRANCH_TO_BUILD=master
 export GIT_LOCAL_BRANCH=build
 
-export APP_NAME="TCG Chat"
+export APP_NAME="TCG Trader Chat"
 export APP_SCHEME=mattermost
 
 #export INCREMENT_BUILD_NUMBER=false
@@ -27,7 +27,7 @@ export MATCH_USERNAME=stuwashere@gmail.com
 # export MATCH_PASSWORD=<itunes connect password>
 # export MATCH_KEYCHAIN_PASSWORD=<the password of the user running the build in the build machine>
 export MATCH_GIT_URL=https://github.com/TheChartGuys/fastlane-certs.git
-export MATCH_APP_IDENTIFIER=com.mattermost.rnbeta.NotificationService,com.mattermost.rnbeta.MattermostShare,com.mattermost.rnbeta
+export MATCH_APP_IDENTIFIER=com.tcg.chat.NotificationService,com.tcg.chat.MattermostShare,com.tcg.chat
 export MATCH_TYPE=appstore
 export MATCH_SHALLOW_CLONE=true
 export MATCH_SKIP_DOCS=true
@@ -40,7 +40,7 @@ export PILOT_SKIP_WAITING_FOR_BUILD_PROCESSING=true
 
 ############ NEEDED TO UPLOAD THE BUILD TO GOOGLE PLAY ############
 export SUPPLY_TRACK=alpha
-export SUPPLY_PACKAGE_NAME=com.mattermost.rnbeta
+export SUPPLY_PACKAGE_NAME=com.tcg.chat
 export SUPPLY_JSON_KEY=<The path to the service account json file used to authenticate with Google>
 export SUPPLY_VALIDATE_ONLY=false
 
@@ -50,11 +50,11 @@ export BUILD_FOR_RELEASE=true
 export REPLACE_ASSETS=true
 
 ############ APP IDENTIFIERS ############
-export MAIN_APP_IDENTIFIER=com.tcg.mattermost
-export EXTENSION_APP_IDENTIFIER=com.mattermost.rnbeta.MattermostShare
-export NOTIFICATION_SERVICE_IDENTIFIER=com.mattermost.rnbeta.NotificationService
-export IOS_APP_GROUP=group.com.mattermost.rnbeta
-export IOS_ICLOUD_CONTAINER=iCloud.com.mattermost.rnbeta
+export MAIN_APP_IDENTIFIER=com.tcg.chat
+export EXTENSION_APP_IDENTIFIER=com.tcg.chat.MattermostShare
+export NOTIFICATION_SERVICE_IDENTIFIER=com.tcg.chat.NotificationService
+export IOS_APP_GROUP=group.com.tcg.chat
+export IOS_ICLOUD_CONTAINER=iCloud.com.tcg.chat
 export IOS_BUILD_EXPORT_METHOD=app-store
 
 ############ SET TO TRUE TO UPLOAD THE BUILDS TO TESTFLIGH AND GOOGLE PLAY ############
