--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -43,6 +43,7 @@ jobs:
         FASTLANE_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
+        FASTLANE_SESSION: ${{ secrets.FASTLANE_SESSION }}
         # APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
         # APPLE_DEVELOPER_TEAM_ID: ${{ secrets.APPLE_DEVELOPER_TEAM_ID }}
         # Ensure all necessary environment variables are correctly set
